--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-#package specific
+# project specific
 outputs/*
-input_files/*
 output.csv
 *.ipynb
-gen_input_files
+gen_input_files/
 
 # C extensions
 *.so
